--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <script src="https://kit.fontawesome.com/8e223bc082.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="mwrps2.css">
+    <link rel="stylesheet" href="mwrps.css">
 
 </head>
 <body>
@@ -24,6 +24,6 @@
     <div id="computerDisplay"></div>
     <div id="resultDisplay"></div>
 
-    <script src="mwrps2.js" defer></script>
+    <script src="mwrps.js" defer></script>
 </body>
 </html>
